--- a/app.json
+++ b/app.json
@@ -10,9 +10,8 @@
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "splash": {
-      "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "image": "./Resources/GitHub_Logo_White.png",
+      "backgroundColor": "#24292e"
     },
     "ios": {
       "supportsTablet": true
