--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "github-instagram",
-    "description": "A very interesting project.",
-    "slug": "github-instagram",
+    "name": "Reciept",
+    "description": "Scan your reciept easily!",
+    "slug": "reciept",
     "privacy": "public",
     "sdkVersion": "25.0.0",
     "platforms": ["ios", "android"],
@@ -10,8 +10,8 @@
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "splash": {
-      "image": "./Resources/GitHub_Logo_White.png",
-      "backgroundColor": "#24292e"
+      "image": "./assets/images/splash.png",
+      "backgroundColor": "#ffffff"
     },
     "ios": {
       "supportsTablet": true
