--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@expo/samples": "2.1.1",
     "base-64": "^0.1.0",
     "expo": "^25.0.0",
+    "lodash": "^4.17.10",
     "react": "16.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
+    "react-native-chart": "^1.0.8-beta",
     "react-native-elements": "^1.0.0-beta4",
     "react-native-list-popover": "^1.1.1",
-    "react-navigation": "^1.0.0-beta.27"
+    "react-navigation": "^1.0.0-beta.27",
+    "victory-native": "^0.17.4"
   },
   "devDependencies": {
     "jest-expo": "^25.0.0"
